chore: jest fixed

--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -151,7 +151,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1656676070626,
+  &quot;startTime&quot;: 1656676274935,
   &quot;success&quot;: true,
   &quot;testResults&quot;: [
     {
@@ -162,10 +162,10 @@
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1656676076363,
-        &quot;runtime&quot;: 5642,
-        &quot;slow&quot;: true,
-        &quot;start&quot;: 1656676070721
+        &quot;end&quot;: 1656676279389,
+        &quot;runtime&quot;: 4368,
+        &quot;slow&quot;: false,
+        &quot;start&quot;: 1656676275021
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -181,7 +181,7 @@
       &quot;testResults&quot;: [
         {
           &quot;ancestorTitles&quot;: [],
-          &quot;duration&quot;: 209,
+          &quot;duration&quot;: 100,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;renders correctly&quot;,
